--- a/web/index.html
+++ b/web/index.html
@@ -55,5 +55,26 @@
       });
     });
   </script>
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "firebase/app";
+  import { getAnalytics } from "firebase/analytics";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+  apiKey: "AIzaSyAODTnJt5d1AHlkKBGr-uoBd0NX-WEnCiE",
+  authDomain: "fullserva.firebaseapp.com",
+  projectId: "fullserva",
+  storageBucket: "fullserva.appspot.com",
+  messagingSenderId: "430759493613",
+  appId: "1:430759493613:web:06f3099028b1a48db5b1e4",
+  measurementId: "G-KR28GQMD39"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
 </body>
 </html>
